--- a/style.css
+++ b/style.css
@@ -18,7 +18,195 @@ body {
     margin: 10px;
 }
 
-.esconderLetra {
-    display: none;
-    font-size: 18px;
+.btn-iniciar {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+
+    position: absolute;
+    width: 317px;
+    height: 114px;
+    left: 0;
+    top: 20rem;
+
+    background: #E1B25C;
+    border-radius: 24px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 22px;
+    display: flex;
+    justify-content: center;
+
+    color: #FFFFFF;
 }
+
+.btn-palavra {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+    position: absolute;
+    width: 300px;
+    height: 80px;
+    left: 0.5rem;
+    top: 28rem;
+    border: 1px solid #E1B25C;
+    box-sizing: border-box;
+    border-radius: 24px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 26px;
+    display: flex;
+    justify-content: center;
+    color: #E1B25C;
+}
+
+.text-input {
+    position: absolute;
+    width: 600px;
+    height: auto;
+    left: 1.5rem;
+    top: 200px;
+
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 150%;
+    justify-content: baseline;
+
+    color: #E1B25C;
+    background: transparent;
+    border: none;
+    text-transform: uppercase;
+}
+::placeholder {color:#E1B25C; text-transform: lowercase;}
+
+.text-input:focus {
+    border: none;
+    outline: none;
+}
+
+.logo{
+    position:absolute;
+    left: 50px;
+    right: 37.43%;
+    top: 40px;
+    bottom: 0%;
+    width: 140px;
+    height: 140px;
+}
+
+.img-alerta {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+}
+
+label {
+    flex-direction: row;
+    position: static;
+    width: 300px;
+    height: 18px;
+    left: 24px;
+    top: 0px;
+    padding-left: 25px;
+    font-weight: 600;
+
+    font-family: Noto;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 100%;
+
+    color: #D5D6C4;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+
+    position: absolute;
+    width: auto;
+    height: 18px;
+    left: 2rem;
+    top: 41rem;
+}
+
+.botoes-div {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+
+    position: absolute;
+    width: 680px;
+    height: 67px;
+    left: 0;
+    top: 43rem;
+}
+
+.btn-amarelo {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+
+    position: static;
+    width: 328px;
+    height: 67px;
+    left: 0px;
+    top: 0px;
+
+    background: #E1B25C;
+    border-radius: 24px;
+
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    margin: 0px 24px;
+    flex-grow: 0;
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 19px;
+    justify-content: center;
+}
+
+.btn-cinza {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 24px;
+
+    position: static;
+    width: 328px;
+    height: 67px;
+    left: 352px;
+    top: 0px;
+
+    background: #FFFFFF;
+
+    border: 1px solid #E1B25C;
+    box-sizing: border-box;
+    border-radius: 24px;
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    margin: 0px 24px;
+
+    color: #E1B25C;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 19px;
+    justify-content: center;
+}
+
